...
    <TextView
        android:id="@+id/urgentLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15sp"
        android:text="Urgent"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>

...
